[package]
name = "tokio-lite"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
metrics = ["dep:metrics"]
observability = ["tracing", "metrics"]

[dependencies]
bytes = "1.11.0"
futures = "0.3.31"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
slab = "0.4.11"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
metrics = { version = "0.22", optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "runtime_bench"
harness = false
